--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,10 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/main/Dotnet.gitignore
 
+# .vs folder (Visual Studio files)
+.vs/
+
+
 # Build results
 [Dd]ebug/
 [Dd]ebugPublic/
